--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
 
-<div id="earlyorderModal" class="modal fade" tabindex="-1">
+<!-- <div id="earlyorderModal" class="modal fade" tabindex="-1">
     <div class="modal-dialog"> <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Спасибо!</h5>
@@ -115,6 +115,6 @@
             <button type="button" class="btn btn-primary" data-dismiss="modal">Ok!</button>
         </div>
     </div>
-</div>
+</div> -->
 </body>
 </html>
